fix(upcoming): upcoming view would get squished if there were too many upcoming matches

--- a/src/scss/site.scss
+++ b/src/scss/site.scss
@@ -129,6 +129,8 @@ station {
 
 .upcoming-match {
 
+  min-height: 60px;
+
   &:not(.small) {
     @include all-widths(600px);
 
